# Mars-Rover

./: README.md
kinematics_validation/: Inverse_kinematics_sympy.ipynb  Inverse_kinematics_sympy.py  forward_kinematics_sympy.ipynb  forward_kinematics_sympy.py
ros2 package/: README.md
ros2 package/arm_assm/: CMakeLists.txt  package.xml
ros2 package/arm_assm/config/: control.yaml
ros2 package/arm_assm/launch/: debug.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
ros2 package/arm_assm/meshes/: base_link.STL  connector_1.STL  connector_2.STL  left_front_steer.STL  left_front_wheel.STL  motor_1.STL  motor_2.STL  motor_3.STL  motor_4.STL  motor_5.STL  rear_axle.STL  right_front_steer.STL  right_front_wheel.STL  rover_link.STL
ros2 package/arm_assm/models/unit_box/: model.sdf
ros2 package/arm_assm/rviz/: display_default.rviz
ros2 package/arm_assm/scripts/: ee_pos_output.py  ik_controller.py  inverse_kinematics.py  joint_state_listener.py  teleop.py
ros2 package/arm_assm/urdf/: arm_assm.csv  arm_assm.urdf.xacro
ros2 package/arm_assm/worlds/: pick_place.world
solidworks assembly/: M_base.SLDPRT  Motor_120.SLDPRT  Motor_150.SLDPRT  Motor_90.SLDPRT  chassis.SLDPRT  end_effector.SLDPRT  front steer.SLDPRT  link.SLDPRT  link_1.SLDPRT  link_2.SLDPRT  manipulator.SLDASM  rear_axle.SLDPRT  wheel.SLDPRT
